# ttb-pymono

./: .gitignore  README.md  SUBMISSION-README.md  pyproject.toml  setup_venv.sh
docker/: .dockerignore  .env.example  Dockerfile  README.md  docker-build.sh  docker-compose.prod.yml  docker-compose.yml  docker-run.sh
treasury/: .env
treasury/services/gateways/ttb_api/: __main__.py
treasury/services/gateways/ttb_api/docs/: README-GQL-MUTATIONS.md
treasury/services/gateways/ttb_api/main/adapter/inp/gql/: error_handler.py  mutation.py  query.py
treasury/services/gateways/ttb_api/main/application/config/: api_service_config.py  config.py  flask_config.py
treasury/services/gateways/ttb_api/main/application/exceptions/: exceptions.py
treasury/services/gateways/ttb_api/main/application/models/domain/: entity_descriptor.py  (+4 more)
treasury/services/gateways/ttb_api/main/application/usecases/: label_approval_jobs.py  label_approval_jobs_service.py  label_data_analysis.py  label_data_analysis_pytesseract.py  label_data_analysis_service.py  label_data_extraction.py  label_data_extraction_service.py  llm_prompts.py  user_management.py
treasury/services/gateways/ttb_api/main/application/utils/: datetime_utils.py
treasury/services/gateways/ttb_api/main/tools/: README.md  create_review_job.py
treasury/services/gateways/ttb_api/test/application/usecases/: README-INTEGRATION-TESTS.md  test_label_approval_jobs_service.py  test_label_data_extraction_service.py
treasury/services/gateways/ttb_api/test/testing/: base_api_service_test_case.py  security_context_test_utils.py
(+21 files in other folders)
